# mumzworld

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: __init__.py  main.py
backend/api/: routes.py
backend/core/: config.py  exceptions.py  logging.py
backend/gift_finder/: __init__.py  catalog.json  catalog.py  parser.py  schemas.py  service.py
backend/llm/: client.py  prompts.py
eval/: eval.py  test_cases.py
frontend/: app.js  index.html  style.css
